# muscle

./: CMakeLists.txt  Dockerfile  Dockertest.txt  MERGE_MSG  README.md  docker-compose.yml  git.docx  shoulder.json  xorg.conf
example/: Lollipop.json  elbow_model.json  elbow_model_collision.json  elbow_model_static_millimeter.json  shoulder.json  shoulder_local_y.json  torus.json
script/: analyze.sh  analyzeLinux.sh  change_origin_insertion.py  change_pos.py  change_sign.py  combine_data.py  cut_figure.py  headline_time_value.py  plot.py  plot_constraint.py  plot_momenarm.py  plot_new.py
src/: main.cpp  run_model.cpp  run_model.h
src/IO/: IO.cpp  IO.h
src/config/: config.cpp  config.h
src/constraint/: constraint.cpp  constraint.h  constraintshape.cpp  constraintshape.h
src/initial_guess/: initialguess.cpp  initialguess.h
src/math/: math.cpp  math.h
src/model/: model.cpp  model.h
src/objective/: objective.cpp  objective.h
src/parm/: fsolve.cpp  fsolve.h  parm.cpp  parm.h
src/parm/body/: body.cpp  body.h  body_basic.cpp  body_basic.h  shape.cpp  shape.h
src/parm/joint/: joint.cpp  joint.h
src/parm/muscle/: muscle.cpp  muscle.h
src/postprocessing/: postprocessing.cpp  postprocessing.h
src/print/: print.cpp  print.h
src/qtwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  setmodelwindow.cpp  setmodelwindow.h
src/qtwindow/page/: bodypage.cpp  bodypage.h  jointpage.cpp  jointpage.h  musclepage.cpp  musclepage.h  postprocessingpage.cpp  postprocessingpage.h  runprogrampage.cpp  runprogrampage.h  solvesettingpage.cpp  solvesettingpage.h
src/qtwindow/page/jointtype/: revolutejointpage.cpp  revolutejointpage.h  sphericaljointpage.cpp  sphericaljointpage.h  translationjointpage.cpp  translationjointpage.h
src/solveeq/: ipopt.cpp  ipopt.h  solveeq.cpp  solveeq.h
